Feat: nginx 서버, 로케이션 지시어 추가

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -26,7 +26,7 @@ server {
     }
     location /redirect {
         root www;
-        return 301 /;
+        try_files /;
     }
     location /limit {
         root www/postdir;
