--- a/conf/default.conf
+++ b/conf/default.conf
@@ -4,52 +4,52 @@ server {
         root www; 
     }
 }
-    # listen 8000;
-        # index index.html;
-#     location /hello {
-#         root www;
-#         autoindex on; 
-#         }
-#     location /post {
-#         root www/postdir;
-#         upload uploads;
-#     }
-#     location /cgi-bin {
-#         root www/cgi-bin;
-#         index index.sh;
-#         .sh /bin/bash;
-#         .py /usr/bin/python3;
-#         .php ./php-cgi;
-#     }
-#     location /cookie {
-#         root www/cookie;
-#         .php ./php-cgi;
-#     }
-#     location /redirect {
-#         root www;
-#         try_files /;
-#     }
-#     location /limit {
-#         root www/postdir;
-#         upload uploads;
-#         limit_except GET;
-#         client_max_body_size 20;
-#     }
-# }
-# server {
-#     listen 8001;
-#     server_name webserv.com;
-#     error_page 400 401 402 403 404 www/errPage/500.html;
-#     location / {
-#         root www;
-#         index index.html;
-#         limit_except GET;
-#     }
-# }
-# server {
-#     listen 8002;
-#     location / {
-#         root www;
-#         index empty;
-#     }
-# }
+    listen 8000;
+        index index.html;
+    location /hello {
+        root www;
+        autoindex on; 
+        }
+    location /post {
+        root www/postdir;
+        upload uploads;
+    }
+    location /cgi-bin {
+        root www/cgi-bin;
+        index index.sh;
+        .sh /bin/bash;
+        .py /usr/bin/python3;
+        .php ./php-cgi;
+    }
+    location /cookie {
+        root www/cookie;
+        .php ./php-cgi;
+    }
+    location /redirect {
+        root www;
+        try_files /;
+    }
+    location /limit {
+        root www/postdir;
+        upload uploads;
+        limit_except GET;
+        client_max_body_size 20;
+    }
+}
+server {
+    listen 8001;
+    server_name webserv.com;
+    error_page 400 401 402 403 404 www/errPage/500.html;
+    location / {
+        root www;
+        index index.html;
+        limit_except GET;
+    }
+}
+server {
+    listen 8002;
+    location / {
+        root www;
+        index empty;
+    }
+}
