Feat. add checkSyntax func

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,7 +1,17 @@
 server {
     server_name localhost;
     listen 8000;
-    location / {
-        root; 
+    location \fjds asdfasdf {
+        root test;
 	}
 }
+
+server {
+    server_name localhost;
+    listen 8000;
+    location \fjds asdfasdf {
+        root test;
+	}
+}
+
+
