Fix: syntax semicolon error compelte

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,17 +1,7 @@
 server {
     server_name localhost;
     listen 8000;
-    location \fjds asdfasdf {
+    location \path {
         root test;
 	}
 }
-
-server {
-    server_name localhost;
-    listen 8000;
-    location \fjds asdfasdf {
-        root test;
-	}
-}
-
-
