Refactor: server getter setter merge one function

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -3,6 +3,16 @@ server {
     listen 8000;
     location \path {
         root test;
+	}
+    location \path {
+        root test;
+	}
+}
+
+server {
+    server_name localhost;
+    listen 8000;
+    location \path {
         root test;
 	}
 }
