--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,5 +1,5 @@
 server {
-    server_name localhost;
+    server_name localhost aaa bbb ccc ddd;
     listen 8000;
     location \path {
         root test;
