--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,18 +1,18 @@
 server {
-    server_name localhost aaa bbb ccc ddd;
+    server_name localhost aaa bbb ccc ddd
     listen 8000;
-    location \path {
-        root test;
-	}
     location \path {
         root test;
 	}
 }
 
 server {
-    server_name localhost;
+    server_name localhost aaa bbb ccc ddd
     listen 8000;
     location \path {
+        root test;
+	}
+    location \path1 {
         root test;
 	}
 }
