Docs: default.copy port 8000 -> 4242

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,14 +1,14 @@
 server {
     server_name localhost aaa bbb ccc ddd
-    listen 8000;
-    location \path {
+    listen 4242;
+    location \resource {
         root test;
 	}
 }
 
 server {
     server_name localhost aaa bbb ccc ddd
-    listen 8000;
+    listen 4243;
     location \path {
         root test;
 	}
