Feat: Request parsing func prototype add and tomrrow expected implement

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,8 +1,8 @@
 server {
     server_name localhost aaa bbb ccc ddd
     listen 4242;
-    location \resource {
-        root test;
+    location \ {
+        root resource;
 	}
 }
 
