--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,5 +1,5 @@
 server {
-    server_name localhost aaa bbb ccc ddd
+    server_name localhost aaa bbb ccc ddd;
     listen 4242;
     location \ {
         root resource;
@@ -7,7 +7,7 @@ server {
 }
 
 server {
-    server_name localhost aaa bbb ccc ddd
+    server_name localhost aaa bbb ccc ddd;
     listen 4243;
     location \path {
         root test;
