Test: server root 변수 이니셜라이즈 추가, 경로 쉽게 변환하기 위해서 테스트 코드 추가

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,8 +1,12 @@
 server {
     server_name localhost aaa bbb ccc ddd;
     listen 127.0.0.1:4242;
+    root src/pages/;
+    index index.html;
+    
     location \ {
         root resource;
+        index hello.html;
 	}
 }
 
