--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,11 +1,11 @@
 server {
     server_name localhost aaa bbb ccc ddd;
     listen 127.0.0.1:4242;
-    root src/pages/;
+    root /src/pages;
     index index.html;
     
-    location \ {
-        root resource;
+    location / {
+        root /src/pages;
         index hello.html;
 	}
 }
@@ -13,10 +13,10 @@ server {
 server {
     server_name localhost aaa bbb ccc ddd;
     listen 4243;
-    location \path {
+    location /path {
         root test;
 	}
-    location \path1 {
+    location /path1 {
         root test;
 	}
 }
