Feat: Delete 구현 clear (but location _path / no/ 지금은 붙어있는 경로에만 지울 쑤 있음 )

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,22 +1,8 @@
 server {
-    server_name localhost aaa bbb ccc ddd;
+    server_name localhost;
     listen 127.0.0.1:4242;
-    root /src/pages;
-    index index.html;
     
-    location / {
-        root /src/pages;
-        index hello.html;
-	}
-}
-
-server {
-    server_name localhost aaa bbb ccc ddd;
-    listen 4243;
-    location /path {
-        root test;
-	}
-    location /path1 {
-        root test;
+    location /public {
+        limit_except DELETE;
 	}
 }
