Fix: 잘못된 경로 요청시 임시로 exit해서 segfault 막음

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -5,4 +5,8 @@ server {
     location /public {
         limit_except DELETE;
 	}
+    location / {
+        root /src/pages/;
+        index index.html;
+    }
 }
