Fix: auto index file clear

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -6,7 +6,11 @@ server {
         limit_except DELETE;
 	}
     location / {
-        root /src/pages/;
-        index index.html;
+        root /src/pages;
+        autoindex on;
+    }
+    location /usr {
+        root /src/pages;
+        autoindex on;
     }
 }
