--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -7,6 +7,7 @@ server {
 	}
     location / {
         root /src/pages;
+        index hello.html;
         autoindex on;
     }
     location /usr {
