Feat: url 에 /redirect 입력 시 다른 페이지로 넘어감

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -14,4 +14,8 @@ server {
         root /src/pages;
         autoindex on;
     }
+    location /redirect {
+        root /src/pages;
+        try_files redirection.html;
+    }
 }
