Fix checkLimitExcept 는 AResponse 에 CreateResponse 함수에서 진행하도록 수정

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,14 +1,14 @@
 server {
     server_name localhost;
-    listen 127.0.0.1:4242;
+    listen 0.0.0.0:80;
     
     location /public {
         limit_except DELETE;
 	}
     location / {
+        limit_except GET;
         root /src/pages;
         index hello.html;
-        autoindex on;
     }
     location /usr {
         root /src/pages;
