--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -3,7 +3,7 @@ server {
     listen 0.0.0.0:80;
     
     location /public {
-        limit_except DELETE;
+        limit_except POST DELETE;
 	}
     location / {
         limit_except GET;
@@ -18,4 +18,15 @@ server {
         root /src/pages;
         try_files redirection.html;
     }
+    location /directory
+    {
+        root /YoupiBanane;
+        index youpi.bad_extension;
+    }
+
+    location /put_test
+    {
+        root /public;
+    }
 }
+
