--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,32 +1,34 @@
 server {
-    server_name localhost;
-    listen 0.0.0.0:80;
-    
-    location /public {
-        limit_except POST DELETE;
+	server_name localhost;
+	listen 0.0.0.0:80;
+	
+	location /public {
+		limit_except POST DELETE;
 	}
-    location / {
-        limit_except GET;
-        root /src/pages;
-        index hello.html;
-    }
-    location /usr {
-        root /src/pages;
-        autoindex on;
-    }
-    location /redirect {
-        root /src/pages;
-        try_files redirection.html;
-    }
-    location /directory
-    {
-        root /YoupiBanane;
-        index youpi.bad_extension;
-    }
+	location / {
+		limit_except GET;
+		root /src/pages;
+		index hello.html;
+	}
+	location /usr {
+		root /src/pages;
+		autoindex on;
+	}
+	location /redirect {
+		root /src/pages;
+		try_files redirection.html;
+	}
+	location /directory
+	{
+		root /YoupiBanane;
+		index youpi.bad_extension;
+		cgi_param /src/cgi/chunked_upload_cgi.py;
+		.py /usr/bin/python3;
+		.bla /src/cgi/cgi_tester;
+	}
 
-    location /put_test
-    {
-        root /public;
-    }
+	location /put_test {
+		root /public;
+	}
 }
 
