Fix: chunked 10million clear
 	- 100 million not clear 요피쩜블라
	- timer 걸어야 함
	- 소켓 링거옵션 시즈테스트 시간setsocktopt

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -22,12 +22,13 @@ server {
 	{
 		root /YoupiBanane;
 		index youpi.bad_extension;
-		cgi_param /src/cgi/chunked_upload_cgi.py;
-		.py /usr/bin/python3;
+		.py /src/cgi/chunked_upload_cgi.py;
 		.bla /src/cgi/cgi_tester;
 	}
 
 	location /put_test {
 		root /public;
+		.py /src/cgi/chunked_upload_cgi.py;
+		.bla /src/cgi/cgi_tester;
 	}
 }
