Fix: chunked_upload_cgi, upload_cgi >>  post_cgi merge, request->_contentLength int > string, cgi env add

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -30,4 +30,11 @@ server {
 		.py /src/cgi/chunked_upload_cgi.py;
 		.bla /src/cgi/cgi_tester;
 	}
+	location /post_body
+	{
+		root /public;
+		client_max_body_size 100;
+		.py /src/cgi/chunked_upload_cgi.py;
+	}
 }
+		
