Fix : limitExcept parsing, post_process after event process
    - limitExcept parsing 여러 개 받을 수 있도록 수정
    - post_process 는 해당 코드 안에서 이벤트를 걸기 때문에 밖에서 다시
      이벤트를 걸어줄 필요가 없다.

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -3,12 +3,13 @@ server {
 	listen 0.0.0.0:80;
 	
 	location /public {
-		limit_except POST DELETE;
+		limit_except DELETE POST;
 	}
 	location / {
-		limit_except GET;
+		limit_except GET POST;
 		root /src/pages;
 		index hello.html;
+		.py /src/cgi/post_cgi.py;
 	}
 	location /usr {
 		root /src/pages;
@@ -22,19 +23,19 @@ server {
 	{
 		root /YoupiBanane;
 		index youpi.bad_extension;
-		.py /src/cgi/chunked_upload_cgi.py;
+		.py /src/cgi/post_cgi.py;
 		.bla /src/cgi/cgi_tester;
 	}
 	location /put_test {
 		root /public;
-		.py /src/cgi/chunked_upload_cgi.py;
+		.py /src/cgi/post_cgi.py;
 		.bla /src/cgi/cgi_tester;
 	}
 	location /post_body
 	{
 		root /public;
 		client_max_body_size 100;
-		.py /src/cgi/chunked_upload_cgi.py;
+		.py /src/cgi/post_cgi.py;
 	}
 }
 		
