Fix : post cgi 합친 걸로 1억개, x header 클리어

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -6,7 +6,7 @@ server {
 		limit_except DELETE POST;
 	}
 	location / {
-		limit_except GET POST;
+		limit_except GET;
 		root /src/pages;
 		index hello.html;
 		.py /src/cgi/post_cgi.py;
