Feat: post max body size test clear
  - post client 20 benchmark test fail -> postman test require
  - error code 405-> socket close : other error is not close
  - cgi broken pipe error

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -1,16 +1,21 @@
 server {
+	
 	server_name localhost;
 	listen 0.0.0.0:80;
 	
-	location /public {
-		limit_except DELETE POST;
-	}
 	location / {
 		limit_except GET;
 		root /src/pages;
 		index hello.html;
 		.py /src/cgi/post_cgi.py;
 	}
+
+	location /public {
+		limit_except DELETE POST;
+		.py /src/cgi/post_cgi.py;
+		.bla /src/cgi/cgi_tester;
+	}
+
 	location /usr {
 		root /src/pages;
 		autoindex on;
@@ -35,6 +40,16 @@ server {
 	{
 		root /public;
 		client_max_body_size 100;
+		.py /src/cgi/post_cgi.py;
+	}
+}
+
+server {
+	server_name localhost;
+	listen 0.0.0.0:4242;
+	location / {
+		root /src/pages;
+		index hello.html;
 		.py /src/cgi/post_cgi.py;
 	}
 }
