Comment : 추가 및 수정해줘야하는 부분 코멘트 작성함 ( [feat], [fix], [delete] 검색해서 고치면 됨)

--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -11,7 +11,7 @@ server {
 	}
 
 	location /public {
-		limit_except DELETE POST;
+		limit_except DELETE POST GET;
 		.py /src/cgi/post_cgi.py;
 		.bla /src/cgi/cgi_tester;
 	}
@@ -53,4 +53,3 @@ server {
 		.py /src/cgi/post_cgi.py;
 	}
 }
-		
