--- a/conf/default.copy.conf
+++ b/conf/default.copy.conf
@@ -6,7 +6,7 @@ server {
 	location / {
 		limit_except GET;
 		root /src/pages;
-		index hello.html;
+		index index.html;
 		.py /src/cgi/post_cgi.py;
 	}
 
