--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,55 +1,56 @@
 server {
-    server_name localhost;
-    listen 8000;
-    location / {
-        root www; 
-        index index.html;
-    }
-    location /hello {
-        root www;
-        autoindex on; 
-        }
-    location /post {
-        root www/postdir;
-        upload uploads;
-    }
-    location /cgi-bin {
-        root www/cgi-bin;
-        index index.sh;
-        .sh /bin/bash;
-        .py /usr/bin/python3;
-        .php ./php-cgi;
-    }
-    location /cookie {
-        root www/cookie;
-        .php ./php-cgi;
-    }
-    location /redirect {
-        root www;
-        try_files /;
-    }
-    location /limit {
-        root www/postdir;
-        upload uploads;
-        limit_except GET;
-        client_max_body_size 20;
-    }
-}
-server {
-    listen 8001;
-    server_name webserv.com;
-    error_page 400 401 402 403 404 www/errPage/500.html;
-    location / {
-        root www;
-        index index.html;
-        limit_except GET;
-    }
+	root /src/pages;
+	server_name webserv.com;
+	listen 80;
+	
+	location / {
+		limit_except GET;
+		root /src/pages;
+		index index.html;
+		.py /src/cgi/post_cgi.py;
+	}
+
+	location /public {
+		root /public;
+		limit_except DELETE POST GET;
+		.py /src/cgi/post_cgi.py;
+		.bla /src/cgi/cgi_tester;
+	}
+
+	location /usr {
+		root /src/pages;
+		autoindex on;
+	}
+	location /redirect {
+		root /src/pages;
+		try_files redirection.html;
+	}
+	location /directory
+	{
+		root /YoupiBanane;
+		index youpi.bad_extension;
+		.py /src/cgi/post_cgi.py;
+		.bla /src/cgi/cgi_tester;
+	}
+	location /put_test {
+		root /public;
+		.py /src/cgi/post_cgi.py;
+		.bla /src/cgi/cgi_tester;
+	}
+	location /post_body
+	{
+		root /public;
+		client_max_body_size 100;
+		.py /src/cgi/post_cgi.py;
+	}
 }
 
 server {
-    listen 8002;
-    location / {
-        root www;
-        index empty;
-    }
+	server_name example.com;
+	listen 80;
+	location / {
+		root /src/pages;
+		index hello.html;
+		.py /src/cgi/post_cgi.py;
+	}
 }
